--- a/src/app/components/user/sidebar/perfil/perfil.component.html
+++ b/src/app/components/user/sidebar/perfil/perfil.component.html
@@ -9,7 +9,7 @@
 
     <hr class="linea-title">
 
-    <nav mat-tab-nav-bar>
+    <nav mat-tab-nav-bar [tabPanel]="tabPanel">
         <a mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
         {{link.label}}
         </a>
@@ -17,5 +17,7 @@
 </div>
 
 <div class="desplazable">
-    <router-outlet></router-outlet>
+    <mat-tab-nav-panel #tabPanel>
+        <router-outlet></router-outlet>
+    </mat-tab-nav-panel>
 </div>
