--- a/src/app/components/user/sidebar/perfil/perfil.component.css
+++ b/src/app/components/user/sidebar/perfil/perfil.component.css
@@ -1,6 +1,10 @@
-/* .fijo {}
+/* .fijo {} */
 
-.desplazable {} */
+.desplazable {
+    margin-top: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+} 
 
 .title {
     text-align: center;
